_sass/_tufte-extra.scss
/* The default x-height for code is slightly too large in side notes */
.marginnote code,
.sidenote code {
  font-size: 0.9rem;
}
/* ... and slightly to small in body text. */
code {
  font-size: 1.1rem;
}

/* Make "Home" link small */
p.signoff { font-size: 1.2rem; }

body { max-width: 1150px; }

/**
 * Makes it so that top-level <p> don't need to be wrapped in <section>
 */
article > p {
  width: 70%;
}

/* Sidenotes end up with a bunch of hyphens because they're so small */
.sidenote,
.marginnote {
  hyphens: none;
}

p, ol, ul {
  font-size: 1.2rem;
  line-height: 1.7rem;
}

section > p, section > footer, section > table { width: 70%; }

/* 50 + 5 == 55, to be the same width as paragraph */
section > ol, section > ul { width: 65%;
                             -webkit-padding-start: 5%; }

blockquote p { width: 70%; }

blockquote footer { width: 70%; }

hr { width: 70%; }


@media screen and (max-width: 760px) {
  body { width: 85%; }
  article > p, p, footer { width: 100%; }
  section > ol, section > ul { width: 100%; }
  pre code { width: 100%; }
  ul { width: 100%; }
  figure { max-width: 100%; }
  figcaption, figure.fullwidth figcaption { margin-right: 0%;
                                            max-width: none; }
  blockquote p, blockquote footer, div.epigraph > blockquote > footer,.MJXc-display {  width: 90%;
                                    padding-left: 5%;
                                    padding-right: 5%;
                                  }}

